package/templates/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: api
  name: api
spec:
  minReadySeconds: 5
  revisionHistoryLimit: 5
  progressDeadlineSeconds: 60
  strategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: registry.digitalocean.com/openarabic/api:#{BUILD_ID}#
          securityContext:
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
          volumeMounts:
            - name: static-storage
              mountPath: /data
          resources:
            limits:
              memory: 512Mi
              cpu: 1000m
            requests:
              memory: 100Mi
              cpu: 25m
          livenessProbe:
            httpGet:
              path: /health
              port: 3030
            periodSeconds: 10
            initialDelaySeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 3030
            periodSeconds: 10
            initialDelaySeconds: 30
          ports:
            - containerPort: 3030
      restartPolicy: Always
      volumes:
        - name: static-storage
          persistentVolumeClaim:
            claimName: static-storage
