package/templates/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mongo
  name: mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: mongo
    spec:
      containers:
        - env:
            - name: MONGO_INITDB_DATABASE
              valueFrom:
                secretKeyRef:
                  name: mongo-config
                  key: MONGO_INITDB_DATABASE
            - name: MONGO_INITDB_ROOT_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo-config
                  key: MONGO_INITDB_ROOT_PASSWORD
            - name: MONGO_INITDB_ROOT_USERNAME
              valueFrom:
                secretKeyRef:
                  name: mongo-config
                  key: MONGO_INITDB_ROOT_USERNAME
          image: mongo:5-focal
          # resources:
          #   limits:
          #     memory: 2048Mi
          #     cpu: 1000m
          #   requests:
          #     memory: 250Mi
          #     cpu: 100m
          livenessProbe:
            exec:
              command:
              - /bin/sh
              - -c
              - echo 'db.stats().ok' | mongo mongo:27017 --quiet
            initialDelaySeconds: 45
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /data/db
              name: db-data
            - mountPath: /data/configdb
              name: mongo-config
          name: mongo
          ports:
            - containerPort: 27017
      restartPolicy: Always
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
        - name: mongo-config
          persistentVolumeClaim:
            claimName: mongo-config

            echo 'db.stats().ok' | mongo mongo:27017 --quiet
