package/templates/tashkeel-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: tashkeel
  name: tashkeel
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tashkeel
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: tashkeel
    spec:
      containers:
        - image: tashkeel
          name: tashkeel
          ports:
            - containerPort: 3020
          resources: {}
      restartPolicy: Always
status: {}
