package/templates/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web
  name: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - image: registry.digitalocean.com/openarabic/web:issue675-a70624b3-1654974581
          name: web
          ports:
            - containerPort: 3040
          resources:
            limits:
              memory: 1024Mi
              cpu: 1000m
            requests:
              memory: 50Mi
              cpu: 100m
          livenessProbe:
            httpGet:
              path: /
              port: 3040
            periodSeconds: 10
            initialDelaySeconds: 30
      restartPolicy: Always
