package/templates/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: api
  name: api
spec:
  ports:
    - name: "3030"
      port: 3030
      targetPort: 3030
  selector:
    io.kompose.service: api
status:
  loadBalancer: {}
