package/templates/static-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: static
  name: static
spec:
  ports:
    - name: "3010"
      port: 3010
      targetPort: 3010
  selector:
    io.kompose.service: static
status:
  loadBalancer: {}
