package/templates/tashkeel-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: tashkeel
  name: tashkeel
spec:
  ports:
    - name: "3020"
      port: 3020
      targetPort: 3020
  selector:
    io.kompose.service: tashkeel
status:
  loadBalancer: {}
